commit final de la clase 2 de front

--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -1,2 +1,114 @@
-h1
-	color purple
+@import "normalize.styl"
+@import "fonts.styl"
+
+gris_oscuro = #333333
+gris_claro = #818181
+rojo = #000
+a
+	text-decoration none
+body
+	font-family "Varela Round", sans-serif
+	font-size 16px
+figure
+	margin 0
+img
+	vertical-align top
+.button-menu
+	color gris_oscuro
+	left .5em
+	margin-top -10px
+	position absolute
+	top 50%
+.relative
+	position relative
+.container
+	font-size 0
+	padding 1.4rem
+	text-align center
+.actions
+	position absolute
+	bottom 0
+	left 0
+	right 0
+	background rgba(black, .3)
+.action
+	color white
+	margin-right .5em
+	font-size 1.2em
+	&:last-child
+		margin-right 0
+	&.grey
+		color gris_claro
+.relative
+	position relative
+.padding
+	padding 1em
+.padding-tb
+	padding 1em 0
+.border-bottom
+	border-bottom 1px solid gris_claro
+.name
+	color gris_oscuro
+.right-text
+	text-align right
+.menu
+	display none
+.author
+	color gris_claro
+.center-block
+	margin 0 auto
+.center-text
+	text-align center
+.progress
+	margin 1em 0
+	position relative
+	.min
+	.max
+		font-size .8em
+		position absolute
+		top -5px
+	.min
+		left 0
+	.max
+		right 0
+	.total
+		height 5px
+		background gris_claro
+		width 75%
+		border-radius 5px
+		margin 0 auto
+	.state
+		height 5px
+		width 30%
+		background rojo
+		position relative
+	.circle
+		width 10px
+		height 10px
+		background gris_oscuro
+		border-radius 50%
+		position absolute
+		right 0
+		top - 2px
+.header
+	height 3.5em
+	.title
+		font-size 1.1em
+		line-height 3.5em
+		margin 0
+		text-align center
+.song
+	display inline-block
+	font-size 1rem
+	margin-bottom 1em
+	margin-right 1em
+	text-align left
+	width 8rem
+	&:nth-child(even)
+		margin-right 0
+	p
+		margin .5em 0
+
+.playing
+	&.small
+		width 20em
